WIP: Working for spatial unit creation